--- a/about/index.html
+++ b/about/index.html
@@ -452,7 +452,7 @@ document.addEventListener('DOMContentLoaded', function () {
     <img data-src="../images/me.jpg" alt="profile" style="border-radius: 50%; width: 150px; height: 150px;" />
     <div>
         <div class="profile-name">Benedict Tiong</div>
-        <a class="profile-link" href="https://benedict.nycu.me/CV.pdf" rel="external nofollow noreferrer" target="_blank"><b>CV</b></a>
+  <a class="profile-link" href="../CV.pdf" rel="external nofollow noreferrer" target="_blank"><b>CV</b></a>
     </div>
 </div>
 
